[package]
name = "hangmanstructs"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
serde = { version = "1.0.118", features = ["derive"] }
toml = "0.5"

diesel = { version = "1.4.5", features = ["postgres"], optional = true }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"], optional = true }

[features]
sql = ["diesel", "diesel-derive-enum"]
