[package]
name = "udpclient"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.1"
hangmanstructs = { path = "../hangmanstructs"}
unicode-segmentation = "1.7.1"
queue = "0.3.1"
unicode_categories = "0.1.1"
config = "0.10.1"
raylib="3.5.0"
