[package]
name = "udpserver"
version = "0.1.0"
authors = ["Ramesh Balaji <post2rb@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hangmanstructs = { path = "../hangmanstructs", features = ["sql"] }
bincode = "1.3.1"
diesel = { version = "1.4.5", features = ["postgres"] }
diesel-derive-enum = { version = "1.1.0", features = ["postgres"] }
